# MoralMoney-Investing

./: README.md  dev.db  openapi.json  openapi_full.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: .env.example  README.md  requirements.txt
backend/app/: allocate.py  auth.py  db.py  instruments.py  main.py  models.py  preferences.py  providers.py  schemas.py  tags.py  watchlist.py
backend/scripts/: admin.py  demo_flow.py  import_sample.py
generated_client/: README.md  pyproject.toml
generated_client/moral_money_investing_api_client/: __init__.py
scripts/: example_client.py  generate_openapi_full.py  write_openapi.py
tests/: conftest.py  test_api_endpoints.py  test_coverage_boost.py  test_providers.py
